--- a/backend/src/assets/css/header.css
+++ b/backend/src/assets/css/header.css
@@ -6,6 +6,10 @@
   z-index: 101;
 }
 
+.menu {
+  z-index: 1401 !important;
+}
+
 .header-action {
   margin-right: 20px;
 }
@@ -21,7 +25,7 @@
 
 /* Device width is less than or equal to 960px */
 
-@media only screen and (width <= 960px) {
+@media only screen and (width <=960px) {
   .header {
     min-height: 56px;
   }
@@ -33,7 +37,7 @@
 
 /* Device width is greater than or equal to 960px */
 
-@media only screen and (width >= 960px) {
+@media only screen and (width >=960px) {
   .header {
     min-height: 64px;
   }
