--- a/frontend/src/assets/css/header.css
+++ b/frontend/src/assets/css/header.css
@@ -6,6 +6,10 @@
   z-index: 101;
 }
 
+.menu {
+  z-index: 1401 !important;
+}
+
 .header-action {
   margin-right: 20px;
 }
